--- a/ALU/index.html
+++ b/ALU/index.html
@@ -12,13 +12,27 @@
 
 <body>
 
-    <input type="text" class="textBoxA">
-    <button class="btnA">Set A</button>
-    <input type="text" class="textBoxB">
-    <button class="btnB">Set B</button>
+    <div class="container">
+        <div class="setA">
+            <input type="text" class="textBoxA">
+            <button class="btnA">Set A</button>
+            <p class="">A</p>
+        </div>
 
-    <button class="btnResult">Result</button>
-    <p class="result">This is the Result</p>
+        <div class="setB">
+            <input type="text" class="textBoxB">
+            <button class="btnB">Set B</button>
+            <p class="">B</p>
+        </div>
+
+        <div class="result">
+            <input type="text" class="textBoxBase">
+            <button class="btnResult">Result</button>
+            <p class="result">This is the Result</p>
+        </div>
+    </div>
+
+
 
     <script src="code.js" async defer></script>
 </body>
