some visual updates

--- a/ALU/index.html
+++ b/ALU/index.html
@@ -14,6 +14,8 @@
 
 
     <select id="selectBase">
+        <option value="Method">--Base--</option>
+        <option value="empty">------------------</option>
         <option value="2">2</option>
         <option value="4">4</option>
         <option value="8">8</option>
@@ -21,6 +23,8 @@
     </select>
 
     <select id="selectMethod">
+        <option value="Method">--Method--</option>
+        <option value="empty">------------------</option>
         <option value="addAB">A + B</option>
         <option value="subAB">A - B</option>
         <option value="ror">Rotate Right</option>
@@ -42,7 +46,7 @@
 
         <div class="resultCon">
             <button class="btnResult">Result</button>
-            <p class="result">This is the Result</p>
+            <p class="result"></p>
         </div>
     </div>
 
