--- a/ALU/index.html
+++ b/ALU/index.html
@@ -17,9 +17,9 @@
         <option value="Method">--Base--</option>
         <option value="empty">------------------</option>
         <option value="2">2</option>
-        <option value="4">4</option>
-        <option value="8">8</option>
-        <option value="16">16</option>
+        <option value="4">4 -Don't work-</option>
+        <option value="8">8 -Don't work-</option>
+        <option value="16">16 -Don't work-</option>
     </select>
 
     <select id="selectMethod">
@@ -27,8 +27,8 @@
         <option value="empty">------------------</option>
         <option value="addAB">A + B</option>
         <option value="subAB">A - B</option>
-        <option value="ror">Rotate Right</option>
-        <option value="rol">Rotate Left</option>
+        <option value="ror">Rotate Right -Don't work-</option>
+        <option value="rol">Rotate Left -Don't work-</option>
     </select>
 
     <div class="container">
