--- a/ALU/index.html
+++ b/ALU/index.html
@@ -27,8 +27,8 @@
         <option value="empty">------------------</option>
         <option value="addAB">A + B</option>
         <option value="subAB">A - B</option>
-        <option value="ror">Rotate Right -Don't work-</option>
-        <option value="rol">Rotate Left -Don't work-</option>
+        <option value="rorA">Rotate Right -Don't work-</option>
+        <option value="rolA">Rotate Left -Don't work-</option>
     </select>
 
     <div class="container">
