Added different bases

--- a/ALU/index.html
+++ b/ALU/index.html
@@ -29,6 +29,11 @@
         <option value="subAB">A - B</option>
         <option value="rorA">Rotate Right</option>
         <option value="rolA">Rotate Left</option>
+        <option value="shiftrA">Shift Right</option>
+        <option value="shiftlA">Shift Left</option>
+        <option value="andAB">AND</option>
+        <option value="orAB">OR</option>
+        <option value="xorAB">XOR</option>
     </select>
 
     <div class="container">
