--- a/Backpack/index.html
+++ b/Backpack/index.html
@@ -13,6 +13,17 @@
 <body>
     <pre class="items"></pre>
 
+    <table class="table">
+        <tr>
+            <th>Artikel</th>
+            <th>Antal</th>
+            <th>Vikt/st (Kg)</th>
+            <th>Volym/st (liter)</th>
+            <th>Total Vikt (Kg)</th>
+            <th>Total Volym (liter)</th>
+        </tr>
+    </table>
+
     <script src="/dist/code.js" async defer></script>
 </body>
 
