Final Commit all works as intended

--- a/Backpack/index.html
+++ b/Backpack/index.html
@@ -14,26 +14,15 @@
     <pre class="items"></pre>
 
     <table class="table">
-        <tr>
-            <th>Artikel</th>
-            <th>Antal</th>
-            <th>Vikt/st (Kg)</th>
-            <th>Volym/st (liter)</th>
-            <th>Total Vikt (Kg)</th>
-            <th>Total Volym (liter)</th>
-        </tr>
+
     </table>
 
+    <div class="btn">
+        <button id="changeView">Byta Vy</button>
+    </div>
 
     <table class="tableBag">
-        <tr>
-            <th>Artikel</th>
-            <th>Antal</th>
-            <th>Vikt/st (Kg)</th>
-            <th>Volym/st (liter)</th>
-            <th>Total Vikt (Kg)</th>
-            <th>Total Volym (liter)</th>
-        </tr>
+
     </table>
 
     <script src="/dist/code.js" async defer></script>
